tests/negative/gold/type_test.gold
tests/negative/type_test.toit:8:18: error: Constructors may not have return types
  constructor -> A:
                 ^
tests/negative/type_test.toit:8:3: error: Type mismatch. Expected 'A'. Got 'B'
  constructor -> A:
  ^~~~~~~~~~~
Compilation failed.
